# demostf_pov_autouploader

./: README.md  pyproject.toml
demostf_pov_autouploader/: fetch_metadata.py  upload_demo_hardcoded.py  upload_demo_watch.py
